# rust-compiler

./: .gitignore  Cargo.toml  README.md
docs/: report.tex
examples/invalid/: empty_sample.ms  errors_sample.ms  semantic_errors_sample.ms  syntax_error_sample.ms  var_indexing.ms
examples/invalid/lexical/: lexical_error_sample.ms
examples/invalid/semantic/: errors_sample.ms  semantic_errors_sample.ms
examples/invalid/syntax/: syntax_error_sample.ms
examples/valid/: all_language.ms  sample_program.ms  sample_program2.ms  test_sample.ms
report/: report.tex
src/: compiler.rs  lib.rs  main.rs
src/codegen/: code_generator.rs  generator.rs  mod.rs
src/codegen/assambly_gen/: generator.rs  instructions.rs  mod.rs
src/codegen/quadruple_gen/: generator.rs  mod.rs  quadruple.rs
src/error_reporter/: mod.rs  reporter.rs
src/lexer/: error.rs  lexer_core.rs  mod.rs  token.rs
src/parser/: ast.rs  error.rs  grammar.lalrpop  mod.rs  parser_core.rs  pretty_print.rs
src/semantics/: analyzer.rs  analyzer_core.rs  error.rs  mod.rs  source_map.rs  symbol_table.rs
src/semantics/analyzer/: decl_analyzer.rs  expr_analyzer.rs  stmt_analyzer.rs  type_utils.rs
src/semantics/analyzer_core/: decl_analyzer.rs  declaration_analyzer.rs  expr_analyzer.rs  expression_analyzer.rs  statement_analyzer.rs  stmt_analyzer.rs  type_utils.rs
tests/: integration_test.rs  integration_tests.rs  lexer_tests.rs  parser_tests.rs  semantic_tests.rs
