[package]
name = "rust-compiler"
version = "0.1.0"
edition = "2024"
build = "build.rs" # For LALRPOP integration

[dependencies]
colored = "3.0.0"
cranelift = "0.118.0"
cranelift-codegen = "0.118.0"
cranelift-module = "0.118.0"
cranelift-native = "0.118.0"
lalrpop = "0.22.1"
lalrpop-util = "0.22.1"
logos = "0.15.0"
regex = "1.11.1"
thiserror = "2.0.12"
clap = "4" 
cranelift-jit = "0.118.0"

[build-dependencies]
lalrpop = "0.22.1"

[[bin]]
name = "msrc"
path = "src/main.rs"
